# ADOSAndroidGCS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  time_util.h
app/src/main/java/com/altnautica/gcs/: ADOSApplication.kt  AppLifecycleManager.kt  MainActivity.kt
app/src/main/java/com/altnautica/gcs/data/agriculture/: MissionGenerator.kt
app/src/main/java/com/altnautica/gcs/data/alerts/: AlertEngine.kt  TtsManager.kt  VibrationManager.kt
app/src/main/java/com/altnautica/gcs/data/cloud/: CloudVideoClient.kt  ConvexHttpClient.kt  MqttTelemetryClient.kt
app/src/main/java/com/altnautica/gcs/data/di/: DataModule.kt
app/src/main/java/com/altnautica/gcs/data/firmware/: FirmwareManager.kt
app/src/main/java/com/altnautica/gcs/data/flightlog/: FlightDatabase.kt  FlightSessionTracker.kt  TlogRecorder.kt
app/src/main/java/com/altnautica/gcs/data/followme/: FollowAlgorithm.kt  FollowMeEngine.kt
app/src/main/java/com/altnautica/gcs/data/groundstation/: GroundStationApi.kt  GroundStationModels.kt  GroundStationRepository.kt
app/src/main/java/com/altnautica/gcs/data/maps/: TileDownloadManager.kt
app/src/main/java/com/altnautica/gcs/data/mavlink/: CommandQueue.kt  MavLinkCommandSender.kt  MavLinkMissionUploader.kt  MavLinkParser.kt  MavLinkRepository.kt  MavLinkWiring.kt  ParameterManager.kt
app/src/main/java/com/altnautica/gcs/data/mission/: MissionRepository.kt  SurveyPatternGenerator.kt
app/src/main/java/com/altnautica/gcs/data/serial/: UsbSerialManager.kt
app/src/main/java/com/altnautica/gcs/data/telemetry/: TelemetryState.kt  TelemetryStore.kt
app/src/main/java/com/altnautica/gcs/data/video/: ModeDetector.kt  VideoMode.kt  VideoRecorder.kt  VideoStreamManager.kt
app/src/main/java/com/altnautica/gcs/data/video/wfb/: WfbLinkStats.kt  WfbMavlinkBridge.kt  WfbUsbManager.kt  WfbVideoManager.kt
app/src/main/java/com/altnautica/gcs/data/voice/: CommandGrammar.kt  VoiceCommandExecutor.kt  VoiceCommandRecognizer.kt
app/src/main/java/com/altnautica/gcs/data/wifi/: WifiConnectionManager.kt
app/src/main/java/com/altnautica/gcs/ui/: ADOSApp.kt
app/src/main/java/com/altnautica/gcs/ui/agriculture/: AgricultureScreen.kt  AgricultureViewModel.kt  FieldMapper.kt  SprayConfigSheet.kt
app/src/main/java/com/altnautica/gcs/ui/alerts/: AlertDrawer.kt
app/src/main/java/com/altnautica/gcs/ui/common/: ControlsPanel.kt  FloatingControls.kt  GamepadManager.kt  GamepadOverlay.kt  MapPip.kt  TakeoffDialog.kt
app/src/main/java/com/altnautica/gcs/ui/configure/: AccelCalibrationWizard.kt  CalibrationScreen.kt  CalibrationViewModel.kt  CompassCalibrationWizard.kt  ConfigureScreen.kt  LevelCalibrationCard.kt  ParameterEditorSheet.kt  ParameterListScreen.kt  ParameterViewModel.kt
app/src/main/java/com/altnautica/gcs/ui/firmware/: FirmwareUpdateDialog.kt
app/src/main/java/com/altnautica/gcs/ui/flightlog/: FlightDetailScreen.kt  FlightDetailViewModel.kt  FlightHistoryScreen.kt  FlightHistoryViewModel.kt
app/src/main/java/com/altnautica/gcs/ui/gallery/: VideoGalleryScreen.kt
app/src/main/java/com/altnautica/gcs/ui/gcs/: FlightModeSelector.kt  FollowMePanel.kt  GcsScreen.kt  GcsViewModel.kt  GeofenceEditor.kt  MapProviderFactory.kt  MapView.kt  OsmMapView.kt  TelemetryDashboard.kt
app/src/main/java/com/altnautica/gcs/ui/groundstation/: DiversityStatsPanel.kt  GroundStationScreen.kt  GroundStationViewModel.kt  PacketLossGraph.kt  SignalMeter.kt
app/src/main/java/com/altnautica/gcs/ui/home/: ConnectionStatus.kt  HomeScreen.kt
app/src/main/java/com/altnautica/gcs/ui/maps/: TileDownloadScreen.kt
app/src/main/java/com/altnautica/gcs/ui/mission/: MissionPlannerScreen.kt  SurveyConfigSheet.kt  WaypointEditor.kt
app/src/main/java/com/altnautica/gcs/ui/navigation/: NavRoutes.kt
app/src/main/java/com/altnautica/gcs/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt  UsbSerialSettings.kt
app/src/main/java/com/altnautica/gcs/ui/theme/: Color.kt  Theme.kt  WindowSize.kt
app/src/main/java/com/altnautica/gcs/ui/video/: CameraControls.kt  CameraSwitcher.kt  DeviceCompatDialog.kt  GimbalJoystick.kt  GyroGimbalController.kt  HudOverlay.kt  ModeIndicator.kt  RecordingControls.kt  VideoScreen.kt  VideoViewModel.kt
app/src/main/java/com/altnautica/gcs/ui/voice/: VoiceConfirmationDialog.kt  VoiceInputButton.kt
app/src/main/java/com/altnautica/gcs/util/: PermissionManager.kt
app/src/main/java/com/openipc/videonative/: DecodingInfo.java  IVideoParamsChanged.java  VideoPlayer.java
app/src/main/java/com/openipc/wfbngrtl8812/: WfbNGStats.java  WfbNGStatsChanged.java  WfbNgLink.java
app/src/main/res/values/: mapbox.xml  strings.xml  themes.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-kn/: strings.xml
app/src/main/res/values-mr/: strings.xml
app/src/main/res/values-pa/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-te/: strings.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/com/altnautica/gcs/: MavLinkParserTest.kt  MissionGeneratorTest.kt  ModeDetectorTest.kt  PermissionManagerTest.kt  TelemetryStoreTest.kt
